--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -2,6 +2,8 @@
 
 }
 
+//Mobile: 375px
+//Desktop: 1440px
 //640px, 1024px, 1400px
 $breakpoints-up: ("medium": "40em", "large": "64em", "xlarge": "87.5em");
 
