--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -35,19 +35,62 @@
     &__btn {
         background-color: $white;
     }
+    &.open {
+        .header__hamburger {
+            > span:first-child {
+              transform: rotate(45deg);
+            } 
+            > span:nth-child(2) {
+              opacity: 0;
+            }
+            > span:last-child {
+              transform: rotate(-45deg);
+            }
+        }
+    }
+    &__hamburger {
+        > span {
+            display: block;
+            width: 24px;
+            height: 3px;
+            background-color: $white;
+            transition: all 300ms ease-in-out;
+            transform-origin: 0% 50%;
+            margin-bottom: 6px;
+        }
+    }
     &__menu {
+        display: flex;
+        flex-direction: column;
+        z-index: 1;
+        position: absolute;
+        width: 90%;
+        background: $white;
+        padding: 2.8125rem;
+        left: 50%;
+        transform: translate(-50%);
+        font-size: 1.4rem;
+        a {
+            padding: 1.1rem;
+            color: $darkGrayishBlue;
+            text-align: center;
+        }
 
+        button {
+            background-color: $yellow;
+            font-size: 1.4rem;
+            margin-top: 1.1rem;
+        }
     }
 
     .hero {
-        //border: 1px solid red;
         &__title {
             color: $white;
             font-size: 3rem;
             font-family: $secondary-font-family;
             font-weight: $secondary-font-weight-bold;
             line-height: $heading-line-height;
-            letter-spacing: 7px;
+            letter-spacing: 10px;
         }
         &__arrow {
             animation-name: arrow-down;
