--- a/app/scss/_features.scss
+++ b/app/scss/_features.scss
@@ -1,37 +1,38 @@
 .features {
     .grid {
-        display: grid;
-        grid-template-columns: 100%;
-       
-        @include breakpoint-up(large) {  
+        &__2 { background-image: url("/images/mobile/image-transform.jpg"); }
+        &__3 { background-image: url("/images/mobile/image-stand-out.jpg"); }
+        &__5 { background-image: url("/images/mobile/image-graphic-design.jpg"); }
+        &__6 { background-image: url("/images/mobile/image-photography.jpg"); }
+        @include breakpoint-up(medium) {
+            display: grid;
             grid-template-columns: 50% 50%;
+        }  
+        @include breakpoint-up(large) {  
+            &__2 { background-image: url("/images/desktop/image-transform.jpg"); }
+            &__3 { background-image: url("/images/desktop/image-stand-out.jpg"); }
+            &__5 { background-image: url("/images/desktop/image-graphic-design.jpg"); }
+            &__6 { background-image: url("/images/desktop/image-photography.jpg"); }
         }
-        &__2 {
-            background-image: url("/images/desktop/image-transform.jpg");
+        .grid-box {
+            &:nth-last-child(-n+2) { height: 35rem; }
         }
-        &__3 {
-            background-image: url("/images/desktop/image-stand-out.jpg");
-        }
-        &__5 {
-            background-image: url("/images/desktop/image-graphic-design.jpg");
-        }
-        &__6 {
-            background-image: url("/images/desktop/image-photography.jpg");
-        }
-
         .card {
-            text-align: left;
+            text-align: center;
             font-family: $secondary-font-family;
+            @include breakpoint-up(medium) { text-align: left; }
 
             &__heading {
-                font-size: $font-xlg;
+                font-size: 2rem;
                 font-weight: $secondary-font-weight-bold;
+                @include breakpoint-up(medium) { margin-bottom: 1rem; }
             }
             &__text {
                 font-family: $primary-font-family;
                 font-weight: $secondary-font-weight-normal;
-                color: $darkGrayishBlue;       
-                p { line-height: 1.7; }
+                color: $darkGrayishBlue;  
+                @include breakpoint-up(medium) { margin-bottom: 1rem; }    
+                
             }
             &__link {
                 cursor: pointer;
