--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -18,7 +18,6 @@ body {
     font-family: 'Barlow', sans-serif;
     font-size: $font-med;
     font-weight: 500;
-    //color: gray;
     line-height: 1.3;
 
     &.noscroll {
@@ -36,8 +35,8 @@ a, a:visited, a:hover {
     &--pall {
         padding-top: 4.375rem;
         padding-bottom: 4.375rem;
-        padding-left: 1.4rem;
-        padding-right: 1.4rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
 
         @include breakpoint-up(large) {
             padding-top: 6rem;
@@ -49,26 +48,8 @@ a, a:visited, a:hover {
         padding-bottom: 7rem;
     }
     &--px {
-        padding-left: 1.4rem;
-        padding-right: 1.4rem;
-    }
-    &--pl {
-       padding-left: 1.4rem;
-    }
-    &--pr {
-        padding-right: 1.4rem;
-    }
-    &--pb {
-        padding-bottom: 4.375rem;
-        @include breakpoint-up(large) {
-            padding-bottom: 6rem;
-        }
-    }
-    &--pt {
-        padding-top: 4.375rem;
-        @include breakpoint-up(large) {
-            padding-top: 6rem;
-        }
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 }
 
@@ -119,16 +100,28 @@ a, a:visited, a:hover {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    text-align: left;
-    gap: 25px;
-    height: 30rem;
-    padding: 25% 16%;
+    padding: 42.5% 10%;
+    @include breakpoint-up(large) {
+        height: 35rem;
+        padding: 42.5% 16%;
+    }
+}
+.info {
+    padding: 15% 10%;
+    @include breakpoint-up(large) {
+        padding: 42.5% 16%;
+    } 
 }
 
 .wrap {
     text-align: center;
-    transform: translateY(8rem);
+    transform: translateY(10rem);
+    @include breakpoint-up(large) {
+        transform: translateY(5rem);
+    }
 }
+
+p { line-height: 1.7; }
 
 .hide-for-mobile {
     @include breakpoint-down(medium) {
