--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -13,13 +13,15 @@
 
     nav {
         position: relative;
-        padding-top: 1.0625rem;
-        padding-bottom: 1.0625rem;
+        padding-top: 2.0625rem;
+        padding-bottom: 2.0625rem;
     }
     &__logo {
         img {
-            width: 8.9rem;
-            height: 2rem;
+            width: 7.9rem;
+            @include breakpoint-up(medium) {
+                width: 8.9rem;
+            }
         }
     }
     &__links {
@@ -52,7 +54,7 @@
         > span {
             display: block;
             width: 24px;
-            height: 3px;
+            height: 2px;
             background-color: $white;
             transition: all 300ms ease-in-out;
             transform-origin: 0% 50%;
@@ -75,7 +77,6 @@
             color: $darkGrayishBlue;
             text-align: center;
         }
-
         button {
             background-color: $yellow;
             font-size: 1.4rem;
@@ -86,17 +87,23 @@
     .hero {
         &__title {
             color: $white;
-            font-size: 3rem;
+            font-size: 2.8rem;
             font-family: $secondary-font-family;
             font-weight: $secondary-font-weight-bold;
             line-height: $heading-line-height;
-            letter-spacing: 10px;
+            letter-spacing: 5px;
+
+            @include breakpoint-up(medium) {
+                font-size: 3rem;
+                letter-spacing: 10px;
+            }
         }
         &__arrow {
             animation-name: arrow-down;
             animation-duration: 0.8s;
             animation-iteration-count: infinite;
             animation-direction: alternate;
+            //margin-top: 140px;
         }
     }
 }
