--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -89,10 +89,11 @@ a, a:visited, a:hover {
     font-weight: $secondary-font-weight-normal;
     font-size: $font-lg;
     transition: all 300ms ease-in-out;
-
-    &:hover {
-        background-color: rgba(255,255,255,0.3);
-        color: $white;
+    @include breakpoint-up(large) {
+        &:hover {
+            background-color: rgba(255,255,255,0.3);
+            color: $white;
+        }
     }
 }
 
@@ -107,7 +108,7 @@ a, a:visited, a:hover {
     }
 }
 .info {
-    padding: 15% 10%;
+    padding: 20% 10%;
     @include breakpoint-up(large) {
         padding: 42.5% 16%;
     } 
