--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -66,21 +66,33 @@
         flex-direction: column;
         z-index: 1;
         position: absolute;
-        width: 90%;
+        width: 82%;
         background: $white;
         padding: 2.8125rem;
         left: 50%;
         transform: translate(-50%);
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         a {
-            padding: 1.1rem;
+            padding-bottom: 2.9rem;
             color: $darkGrayishBlue;
             text-align: center;
         }
         button {
             background-color: $yellow;
-            font-size: 1.4rem;
-            margin-top: 1.1rem;
+            font-size: 1rem;
+            width: 60%;
+            margin: 0 auto;
+        }
+        &::after {
+            position: absolute;
+            content: "";
+            top: -15px;
+            right: 0;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 0 0 20px 20px;
+            border-color: transparent transparent $white transparent;
         }
     }
 
