Button color fixed.

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -84,6 +84,7 @@ a, a:visited, a:hover {
     border: none;
     border-radius: 50px;
     padding: 1rem 1.5rem;
+    color: $veryDarkDesaturatedBlue;
     cursor: pointer;
     font-family: $secondary-font-family;
     font-weight: $secondary-font-weight-normal;
